# statcast-lab

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: app.py  db.py  utils.py
backend/api/: analytics.py  charts.py  compare.py  framing.py  games.py  hitting.py  pitching.py  players.py  search.py  standings.py  war.py
backend/models/: analytics.py  arsenal.py  charts.py  compare.py  framing.py  games.py  hitting.py  pitching.py  players.py  search.py  standings.py  war.py
backend/services/: boxscore.py  standings.py  stats.py
docs/: METHODOLOGY.md
frontend/: TRASH-FILES.md  index.html  package.json
frontend/TRASH/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AbsChallengeDetail.tsx  Boxscore.tsx  ComparisonTable.tsx  ErrorBoundary.tsx  GameCard.tsx  LeaderboardTable.tsx  PitchByPitch.tsx  PitchUsageByCount.tsx  PlayerHeader.tsx  PlayerPicker.tsx  QueryError.tsx  StatTabs.tsx
frontend/src/hooks/: use-analytics.ts  use-compare.ts  use-container-size.ts  use-dashboard.ts  use-games.ts  (+4 more)
notebooks/: xBA.ipynb  xwOBA.ipynb
pipeline/: cli.py  db.py  schema.py
pipeline/compute/: _common.py  abs_challenges.py  arsenal.py  batted_ball.py  fip.py  framing.py  park_factors.py  percentiles.py  platoon_splits.py  re_count_matrix.py  run_expectancy.py  war.py  woba.py
pipeline/ingest/: abs.py  players.py  plays.py  statcast.py
tests/: test_api.py  test_fip.py  test_ingest.py  test_leaderboard_api.py  test_materialized_views.py  test_players_ingest.py  test_run_expectancy.py  test_schema.py  test_woba.py
(+28 files in other folders)
